src/objects/LG_Credit_Check__c.object
<CustomObject>
    <fields>
        <fullName>LG_ApplicationDate__c</fullName>
        <description>The date on which the credit check was done with the bureau.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ApplicationID__c</fullName>
        <label>Application ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CustomerCreditCheckResults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_CaseReason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous application was accepted and Total exp.&gt;Credit limit.</fullName>
                </value>
                <value>
                    <fullName>Previous application was not accepted.</fullName>
                </value>
                <value>
                    <fullName>Company not found and no consent for principal.</fullName>
                </value>
                <value>
                    <fullName>Company not found.</fullName>
                </value>
                <value>
                    <fullName>Non Ltd Company not found and no consent for principal.</fullName>
                </value>
                <value>
                    <fullName>Non Ltd Company not found.</fullName>
                </value>
                <value>
                    <fullName>Prospect or Customer appeals mitigation.</fullName>
                </value>
                <value>
                    <fullName>Credit check expired with previous mitigation.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ConsentGivenAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ConsentGivenContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CreditCheck_ExecutionDate__c</fullName>
        <label>Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_CreditCheck_Status__c</fullName>
        <label>Credit Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Not completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Credit_Limit__c</fullName>
        <description>The recomended credti limit for the applicant where the applicant can be an individual or organisation.</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_Decision__c</fullName>
        <description>The recomended decision for the credti check application.</description>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Refer</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Mitigation</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_EquifaxCompanyAddressline1__c</fullName>
        <description>Address line one as returned by Service</description>
        <label>Equifax Company Addressline1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EquifaxCompanyAddressline2__c</fullName>
        <label>Equifax Company Addressline2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EquifaxCompanyAddressline3__c</fullName>
        <label>Equifax Company Addressline3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EquifaxOrganisationType__c</fullName>
        <label>EquifaxOrganisationType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Partnership</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Community Interest Company</fullName>
                </value>
                <value>
                    <fullName>Company Ltd by Guarantee</fullName>
                </value>
                <value>
                    <fullName>Company Ltd by Shares</fullName>
                </value>
                <value>
                    <fullName>Co-operative</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Non UK entity</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Religious Organisation</fullName>
                </value>
                <value>
                    <fullName>Sole Trader</fullName>
                </value>
                <value>
                    <fullName>Unincorporated Association</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Equifax_Organisation_ID__c</fullName>
        <label>Equifax Organisation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Checks</relationshipLabel>
        <relationshipName>Credit_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Total_Exposure_Value__c</fullName>
        <label>Total Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_applicationExpiryDate__c</fullName>
        <description>The date on which the credit check application expires with the bureau.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_bureauType__c</fullName>
        <description>The type of the credit bureau.</description>
        <label>Consumer Bureau</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_businessTermValue__c</fullName>
        <description>Represents the corresponding business term value (usually in amount representing deposit or upfront payment) for the business Term. Amount is usually in GBP and duration in months.</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_creditApplicationReference__c</fullName>
        <description>The application reference given back by the credit checking agency back to the applying party.</description>
        <label>Credit Check Application Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_decisionReasons__c</fullName>
        <description>The reason behind which the recommended decision is given. There could be more than one reasons for the recommendation.</description>
        <label>Credit Check Decision Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_decision_Code__c</fullName>
        <label>decision Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_postcode__c</fullName>
        <label>postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_principalIdentifier__c</fullName>
        <description>Identifies the principal to which the application dates apply. Applicable only for Consumer Bureau.</description>
        <label>principalIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_underwrittersNotes__c</fullName>
        <description>The notes entered by the credit check agencies underwriter.</description>
        <label>underwrittersNotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lg_businessTerm__c</fullName>
        <label>Deposit Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Check</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>